--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Fabrizio Melges Ferro"
-  avatar           : "sunset.jpg"
+  avatar           : "sunset.png"
   bio              : "Physics"
   location         : "Chicago, USA"
   employer         : "University of Chicago"
