--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Cormac's Homepage"
 title_separator          : "-"
 name                     : &name "Cormac McCumiskey"
 description              : &description "personal description"
-url                      : https://engineermac.github.io/cormac.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://engineermac.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "EngineerMac/cormac.github.io"
+repository               : "EngineerMac/engineermac.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Cormac McCumiskey"
   avatar           : "profile_pic3.png"
-  bio              : "MEng in Engineering \n Research experience in applied AI"
+  bio              : "MEng in Engineering"
   location         : "Belfast, Northern Ireland"
-  employer         : "PWC"
+  employer         : "PwC"
   pubmed           : 
   #googlescholar    : "https://scholar.google.com/citations?user=UMKkDVwAAAAJ"
   email            : "cmccumiskey@gmail.com"
@@ -96,24 +96,24 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "sudo-Boris"
+  github           : "EngineerMac"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : ""
+  linkedin         : "cormacmcc"
   orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "BorisMeinardus"
+  #twitter          : "BorisMeinardus"
   vine             :
   weibo            :
   xing             :
-  youtube          : "@borismeinardus"
+  #youtube          : "@borismeinardus"
   wikipedia        :
 
 
