--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   - title: "CV"
     # url: /cv/
-    url: files/resumefile.pdf
+    url: files/Resume.pdf
 
   - title: "Portfolio"
     url: /portfolio/
